--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   },
   "dependencies": {
     "bun-plugin-tailwind": "^0.0.14",
+    "cdragon-dd": "^2.0.8",
     "react": "^19",
     "react-dom": "^19",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
+    "@types/bun": "latest",
     "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/bun": "latest"
+    "@types/react-dom": "^19"
   }
 }
